Added new tags to JSON, show tags in songList
Added the new tags and some to the song list views.  Need to add the
favorite and duet filter button, check
http://jsfiddle.net/andreas_karz/rZ5rD/

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
 		"morgan"     : "~1.2.2"
 	},
 	"author": "Scott Ackerson <scott.ackerson@gmail.com>",
-	"version": "0.0.1"
+	"version": "0.0.1",
+	"repository": {
+	  "type": "git",
+	  "url": "git://github.com/scottackerson/mic-night-app.git"
+	}
 }
